// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facebook 1 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1 svg path {
  fill: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          solidcircle={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  share on Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 2 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1 svg path {
  fill: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Facebook"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          solidcircle={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 3 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1 svg path {
  fill: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    small={true}
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          small={true}
          solidcircle={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 4 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
}

<Component
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    circle={true}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  share on Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 5 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
}

<Component
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Facebook"
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 6 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
}

<Component
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    small={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          small={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 7 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    solid={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
                <span>
                  share on Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 8 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Facebook"
    solid={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 9 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    small={true}
    solid={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          small={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 10 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
    solid={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 11 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
}

<Component
  circle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 11 2`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1 svg path {
  fill: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          solidcircle={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 12 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #3b5998;
  border-color: #3b5998;
}

.c1:hover,
.c1:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 13 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c0 svg {
  stroke: #232323;
  fill: none;
}

<Component
  simple={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
    simple={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      simple={true}
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <FacebookIconFill>
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
            />
          </svg>
        </FacebookIconFill>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 14 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c0 svg {
  stroke: #fff;
  fill: none;
}

<Component
  simpleReverse={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
    simpleReverse={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      simpleReverse={true}
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="c0"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <FacebookIconFill>
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
            />
          </svg>
        </FacebookIconFill>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;
